Tab overflow fix and Django 1.3 compatibility

--- a/adagios/media/css/style.css
+++ b/adagios/media/css/style.css
@@ -165,3 +165,8 @@ a.inactive {
 div.label.servicestate {
     width: 100px;
 }
+
+/* Disable overflow in twitter bootstrap tabs */
+.tab-content {
+    overflow: hidden;
+}
